Update phased workflow acceptance coverage